--- a/style.css
+++ b/style.css
@@ -110,5 +110,6 @@ body {
       .dropdown-btn {font-size: 12px; padding-left:5px;}
       .main {margin-left: 20%;}
       .headshot {width: 75px;}
-      .headshot img {width: 75px;}   
+      .headshot img {width: 75px;}  
+      .main {margin-left: 200px;}
     }
